# ElbieFit

./: .coveragerc  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: main.yml  tests.yml
app/: error_handlers.py  main.py  settings.py
app/middleware/: csrf.py  rate_limit.py  theme.py
app/models/: __init__.py  exercise.py  profile.py  template.py  workout.py
app/repositories/: base.py  errors.py  exercise.py  profile.py  template.py  workout.py
app/routes/: auth.py  data.py  demo.py  exercise.py  home.py  profile.py  progress.py  template.py  workout.py
app/templates/: base.html  error.html  home.html  profile.html  templates.py
app/templates/exercises/: _exercise_form.html  exercises.html
app/templates/profile/: _account_card.html  _danger_zone.html  _preferences_card.html  profile.html
app/templates/progress/: _1rm_chart.html  _exercise_chart.html  _volume_chart.html  progress.html
app/utils/: auth.py  dates.py  db.py  demo.py  export.py  log.py  progress.py  seed_data.py  snippets.md  taxonomy.py  theme.py  units.py
infra/: app.yaml  cognito.yaml  data.yaml  iam.yaml  s3.yaml
scripts/: create_demo_user.sh  create_local_table.py  deploy_code.sh  deploy_stack.sh  export_user_data.py  seed.py  seed_data.py  seed_prod.py  update_lambda_code.sh
static/: base.css  components.css  styles.css
static/CSS/: base.css  components.css  themes.css
static/js/: custom-select.js  main.js  menu.js  number-spinner.js
tests/: conftest.py  fakes.py  test_data.py
tests/unit/: test_error_handlers.py
(+56 files in other folders)
